--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap");
+
+* {
+  box-sizing: border-box;
+  font-family: "Oswald", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  padding: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  text-decoration: none;
+  color: black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a:hover {
+  color: black;
+  text-decoration: none;
+}
+.company {
+  font-size: 2rem;
+  font-size: 400;
+}
+.nav-container {
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0rem 1rem;
+  box-shadow: 0 1px 2px 0 rgba(148, 150, 159, 0.3);
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-links {
+  height: 100%;
+}
+.nav-container ul {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  margin: 0 1rem;
+}
+li a {
+  display: block;
+  padding: 1rem;
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+ul li {
+  border-bottom: 3px solid transparent;
+}
+ul li:hover {
+  border-bottom: 3px solid black;
+  border-radius: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.icons-container {
+  display: flex;
+}
+.menu {
+  display: none;
+}
+.menu:hover {
+  cursor: pointer;
+}
+.product-card :hover {
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .navbar-links {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .menu {
+    display: block;
   }
 }
